Instance_WebServer.tf
resource "aws_instance" "Web_Server" {
  count                  = var.Subnet_count * var.Instance_count_per_subnet
  ami                    = data.aws_ami.amzlinux.id
  instance_type          = var.instance_type
  subnet_id              = element(local.subnets_public, count.index)
  vpc_security_group_ids = [aws_security_group.Website-deployment-WebServer.id]
  key_name = "mykey"

  user_data = templatefile("./userdata-WebServer.sh", {
    file_content = "Web Server version 1.2 - ${count.index}"
  })

  tags = {
    Name                  = "WebServer ${count.index + 1} (v${var.infrastructure_version})"
    InfrastructureVersion = var.infrastructure_version
  }
}
